--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -33,7 +33,7 @@ Licence URI: http://www.os-templates.com/template-terms
                     <li>{{ user.username }}</li>
                     <li><i class="fa fa-envelope-o"></i> {{ user.email }}</li>
                 {% else %}
-                    <li>Not logged in!</li>
+                    <li>Guest</li>
                     {#                    <i class="fa fa-phone"></i>#}
                     <li></li>
                 {% endif %}
@@ -71,28 +71,13 @@ Licence URI: http://www.os-templates.com/template-terms
     <header id="header" class="hoc clear">
 
         <div id="logo" class="fl_left">
-            <h1><a href="{% url 'shop:home' %}">Shop</a></h1>
+            <h1><a href="{% url 'shop:home' %}">FriendlyPC</a></h1>
         </div>
 
         <nav id="mainav" class="fl_right">
             <ul class="clear">
                 <li {% comment %}class="active"{% endcomment %}><a href="{% url 'shop:home' %}">Home</a></li>
                 <li><a class="active" href="{% url 'shop:product_list' %}">Products</a></li>
-                {% if user.is_authenticated %}
-                    <li><a class="drop" href="{% url 'shop:profile' %}">User</a>
-                        <ul>
-                            <li><a href="#">Level 2</a></li>
-                            <li><a class="drop" href="#">Level 2 + Drop</a>
-                                <ul>
-                                    <li><a href="#">Level 3</a></li>
-                                    <li><a href="#">Level 3</a></li>
-                                    <li><a href="#">Level 3</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{% url 'cart:cart_detail' %}">Cart</a></li>
-                        </ul>
-                    </li>
-                {% endif %}
                 <li><a href="{% url 'cart:cart_detail' %}">Cart</a></li>
 
             </ul>
@@ -121,60 +106,52 @@ Licence URI: http://www.os-templates.com/template-terms
     <!--FOOTER-->
     <!--FOOTER BACKGROUND IMAGE WRAPPER-->
     <div class="wrapper row4 bgded overlay"
-         style="background-image:url({% static 'images/demo/backgrounds/03.png' %});">
+         style="background-image:url({% static 'images/demo/320x220.png' %});">
         <footer id="footer" class="hoc clear">
 
             <div class="one_quarter first">
-                <h6 class="title">Cras eros malesuada</h6>
-                <p>Ridiculus mus fusce nec odio ut libero vestibulum luctus quis tortor morbi vulputate tincidunt nisi
-                    eu aliquet sapien imperdiet suspendisse.</p>
-                <p>Erat eget luctus porta orci mauris volutpat nisi at ultricies accumsan cum sociis natoque penatibus
-                    magnis.</p>
+                <h6 class="title">About FriendlyPC</h6>
+                <p>FriendlyPC is a passionate computer component company that aims to provide the best pc parts for its customers</p>
+                <p>We can even build it together with you!</p>
             </div>
             <div class="one_quarter">
-                <h6 class="title">Urna sit ollicitudin</h6>
+                <h6 class="title">Contact</h6>
                 <ul class="nospace linklist contact">
                     <li><i class="fa fa-map-marker"></i>
                         <address>
-                            Street Name &amp; Number, Town, Postcode/Zip
+                            Fonty's Rachelsmolen &amp; 1, Eindhoven, 1234AB
                         </address>
                     </li>
                     <li><i class="fa fa-phone"></i> +00 (123) 456 7890<br>
                         +00 (123) 456 7890
                     </li>
                     <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
-                    <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+                    <li><i class="fa fa-envelope-o"></i> info@friendlypc.com</li>
                 </ul>
             </div>
             <div class="one_quarter">
-                <h6 class="title">Libero sapien rhoncus</h6>
+                <h6 class="title">Our packages</h6>
                 <ul class="nospace linklist">
-                    <li><a href="#">Primis in faucibus orci</a></li>
-                    <li><a href="#">Luctus et ultrices posuere</a></li>
-                    <li><a href="#">Cubilia curae aenean quis</a></li>
-                    <li><a href="#">Magna in tellus suscipit</a></li>
-                    <li><a href="#">Consectetur quis quis ipsum</a></li>
+                    <li><a href="#">django-registration</a></li>
+                    <li><a href="#">django-bootstrap3</a></li>
+                    <li><a href="#">crispy_forms</a></li>
+                    <li><a href="#">celery</a></li>
+                    <li><a href="#">pillow</a></li>
                 </ul>
             </div>
             <div class="one_quarter">
-                <h6 class="title">Cursus eleifend tempor</h6>
+                <h6 class="title">Django and python versions</h6>
                 <ul class="nospace linklist">
                     <li>
                         <article>
-                            <h6 class="nospace font-x1"><a href="#">Cras fermentum consequat</a></h6>
-                            <time class="font-xs block btmspace-10" datetime="2045-04-06">Friday, 6<sup>th</sup> April
-                                2045
-                            </time>
-                            <p class="nospace">Est cras purus augue eget lorem vitae porta nisl cras&hellip;</p>
+                            <h6 class="nospace font-x1"><a href="#">Python3</a></h6>
+                            
                         </article>
                     </li>
                     <li>
                         <article>
-                            <h6 class="nospace font-x1"><a href="#">Tellus purus malesuada</a></h6>
-                            <time class="font-xs block btmspace-10" datetime="2045-04-05">Thursday, 5<sup>th</sup> April
-                                2045
-                            </time>
-                            <p class="nospace">Non porta quis venenatis non purus mauris fringilla velit&hellip;</p>
+                            <h6 class="nospace font-x1"><a href="#">django 2.1.4</a></h6>
+                            
                         </article>
                     </li>
                 </ul>
