--- a/web3_project/static/css/layout.css
+++ b/web3_project/static/css/layout.css
@@ -56,7 +56,7 @@ File: Layout CSS
 
 /* Content Area
 --------------------------------------------------------------------------------------------------------------- */
-.container{padding:80px 0;}
+.container{padding:80px 0; max-width: 25.5%; margin: auto;}
 
 /* Content */
 .container .content{}
@@ -194,7 +194,7 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
     width:220px;
     padding:30px 20px 0 0;
 	float: left;
-	margin: -25px 75px 0px 0px;
+	margin: -25px 75px 300px 0px;
 
 	
 }
@@ -447,4 +447,29 @@ table a, #comments a{background-color:inherit;}
 
 	.font-x2{font-size:1.4rem;}
 	.font-x3{font-size:1.6rem;}
+}
+
+
+
+/* alerts */
+
+.alert-success
+{
+	padding: 20px 0;
+	margin: 20 auto;
+	max-width: 45%;
+	text-align: center;
+}
+
+
+
+/* forms */
+.order-form {
+	max-width: 35%;
+	margin: auto;
+}
+
+.order-info {
+	max-width: 35%;
+	margin: auto;
 }
