--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -52,7 +52,7 @@ Licence URI: http://www.os-templates.com/template-terms
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
-                    <li><a href="{% url 'signup' %}">Register</a></li>
+                    <li><a href="{% url 'registration_register' %}">Register</a></li>
                 {% endif %}
             </ul>
         </div>
