--- a/web3_project/templates/shop/home.html
+++ b/web3_project/templates/shop/home.html
@@ -45,16 +45,14 @@
         </li>
         <li class="one_third">
             <article><a href="#"><i class="fa fa-location-arrow"></i></a>
-            <h6 class="heading">Urna lectus praesent</h6>
-            <p>Pulvinar faucibus quam nec lacinia ut tincidunt nisi in euismod consequat donec ut ante tincidunt&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <h6 class="heading">Fast solutions</h6>
+            <p>We provide fast deliveries and reliable supply</p>
             </article>
         </li>
         <li class="one_third">
-            <article><a href="#"><i class="fa fa-subway"></i></a>
-            <h6 class="heading">Tempor lorem aliquet</h6>
-            <p>Leo cras tempus odio in suscipit tempus dolor dolor consequat diam sit amet ullamcorper est enim eu&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <article><a href="#"><i class="fa fa-phone"></i></a>
+            <h6 class="heading">24/7 Support</h6>
+            <p>We provide support for any time of the day, just call one of our agents</p>
             </article>
         </li>
         </ul>
@@ -64,71 +62,7 @@
     </div>
 
 
-<div class="wrapper bgded overlay" style="background-image:url({% static 'images/demo/backgrounds/02.png' %});">
-  <article class="hoc container clear">
-  
-    <div class="three_quarter first">
-      <h6 class="nospace">Metus augue porttitor sed</h6>
-      <p class="nospace">Lectus vitae rutrum auctor lectus pellentesque id pulvinar velit at porta leo</p>
-    </div>
-    <footer class="one_quarter"><a class="btn medium" href="#">More Information &raquo;</a></footer>
-   
-  </article>
-</div>
 
-<div class="wrapper row3">
-  <section class="hoc container clear">
-    
-    <div class="center btmspace-50">
-      <h3 class="font-x2 nospace">Turpis id ex pharetra</h3>
-      <p class="nospace">Imperdiet morbi elementum elit vel diam tincidunt finibus ac et est nullam vulputate</p>
-    </div>
-    <ul class="nospace group latest">
-      <li class="one_third first">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Vestibulum ut ac mattis</h4>
-            <p>Quisque consectetur nibh pharetra vitae id mattis eu tellus aliquam malesuada tempus pulvinar&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-05">5<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Risus nulla varius sit</h4>
-            <p>Eget tincidunt neque in hac habitasse platea dictumst phasellus sollicitudin porta congue ut gravida&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-04">4<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Amet est at elementum</h4>
-            <p>Dapibus duis eu arcu gravida gravida tellus sit amet rhoncus libero mauris ac dolor mattis tincidunt&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-    </ul>
-   
-  </section>
 </div>
 
 
